--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				  <img src="Image/img.jpg" width="200px"> 
 				  <p>
 					Welcome to my blog <br> 
-					Enjoy 👍
+					Just Enjoy 👍
 				  </p>
 				</div>
 			  </div>
