--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
 				  <span class="code">JavaScript</span>
 				</li>
 				<li>
+				  <span class="code">AngularJS</span>
+				</li>
+				<li>
 				  <span class="code">SASS</span>
 				  <a href="https://mahmouddoma.github.io/sass_project/"></a>
 				</li>
@@ -52,6 +55,9 @@
 			<li>
 			  <a href="#">Other Links</a>
 			  <ul class="dropdown dropdown3">
+				<li>
+				  <a class="button" href="https://www.linkedin.com/in/mahmoud-doma-4520a222a/">Linkedin</a>
+				</li>
 				<li>
 				  <a class="button" href="https://twitter.com/Mahmouddoma20">Twitter</a>
 				</li>
